service/tests/models/snapshots/categories/can_create_category_and_normalize_name@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Ok(
    Category {
        id: ID,
        pid: PID,
        name: "winter wear",
        slug: "winter-wear",
        image_link: "https://cdn.example.com/categories/winter.png",
        description: Some(
            "Warm layers",
        ),
        parent_id: None,
        created_at: DATE,
        updated_at: DATE,
        deleted_at: None,
    },
)
