service/tests/models/snapshots/categories/can_create_category_when_slug_already_exists@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Ok(
    Category {
        id: ID,
        pid: PID,
        name: "belts",
        slug: "accessories-1",
        image_link: "https://cdn.example.com/categories/belts.png",
        description: Some(
            "Leather belts",
        ),
        parent_id: None,
        created_at: DATE,
        updated_at: DATE,
        deleted_at: None,
    },
)
