service/tests/models/snapshots/categories/can_create_category_with_description@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Ok(
    Category {
        id: ID,
        pid: PID,
        name: "accessories",
        slug: "accessories",
        image_link: "https://cdn.example.com/categories/accessories.png",
        description: Some(
            "Bags and belts",
        ),
        parent_id: None,
        created_at: DATE,
        updated_at: DATE,
        deleted_at: None,
    },
)
