service/tests/models/snapshots/categories/can_delete_category@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Ok(
    Category {
        id: ID,
        pid: PID,
        name: "trousers",
        slug: "trousers",
        image_link: "https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?auto=format&fit=crop&w=900&q=80",
        description: None,
        parent_id: None,
        created_at: DATE,
        updated_at: DATE,
        deleted_at: Some(
            DATE,
        ),
    },
)
