service/tests/models/snapshots/categories/can_find_all_categories_by_name@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Ok(
    PaginatedModel {
        data: [
            Category {
                id: ID,
                pid: PID,
                name: "t-shirts",
                slug: "t-shirts",
                image_link: "https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=900&q=80",
                description: None,
                parent_id: None,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
        ],
        pagination: Pagination {
            page: 1,
            limit: 20,
            total_items: 1,
            total_pages: 1,
            has_next: false,
            has_prev: false,
        },
    },
)
