service/tests/models/snapshots/categories/can_find_all_categories_when_empty@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Ok(
    PaginatedModel {
        data: [],
        pagination: Pagination {
            page: 1,
            limit: 10,
            total_items: 0,
            total_pages: 0,
            has_next: false,
            has_prev: false,
        },
    },
)
